<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/twIdcita"
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="68dp"
        android:text="@string/id_cita"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerIdCita"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twIdcita" />

    <TextView
        android:id="@+id/twDiagnostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/diagnostico"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIdCita" />

    <EditText
        android:id="@+id/etDiagnostico"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Ingrese el diagnóstico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twDiagnostico" />

    <TextView
        android:id="@+id/twHallazgos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/hallazgos"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDiagnostico" />

    <EditText
        android:id="@+id/etHallazgos"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Ingrese los hallazgos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twHallazgos" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="143dp"
        android:layout_height="58dp"
        android:layout_marginTop="72dp"
        android:text="@string/btn_guardar"
        app:layout_constraintTop_toBottomOf="@+id/etHallazgos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_volver_alta_reporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/volver"
        android:textColor="@color/blue_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

</androidx.constraintlayout.widget.ConstraintLayout>
